--- a/src/index.scss
+++ b/src/index.scss
@@ -11,3 +11,14 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+html,
+body,
+#root {
+  min-height: 100vh;
+  height: auto;
+}
+
+#content{
+  min-height: calc(100vh - 72px);
+}
